feat(core): add time machine and key transparency
